test_case/rust-lang_rust/56765_447039459_82.rs
\n\nAlternatively, if we don't control the struct's defin"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0382]: use of moved value: `lhs`\n  --> /checkout/src/test/ui/binop/binop-consume-args.rs:35:10\n   |\nLL |     lhs / rhs;\n   |     --- value moved here\nLL |     drop(lhs);  //~ ERROR use of moved value: `lhs`\n   |          ^^^ value used here after move\n   |\n   = note: move occurs because `lhs` has type `A`, which does not implement the `Copy` trait\n\n"}
[00:47:45] {"message":"use of moved value: `rhs`","code":{"code":"E0382","explanation":"\nThis error occurs when an attempt is made to use a variable after its contents\nhave been moved elsewhere. For example:\n\n